inlango portfolio v1.2 - fixed word wrap - fixed responsive for home our clients section

--- a/public/styles/desktop-style.css
+++ b/public/styles/desktop-style.css
@@ -337,6 +337,7 @@ body {
         var(--white) 150vh,
         var(--dark-background) 150.3vh
     );
+    padding-bottom: 0;
 }
 
 .inlango-container-purple-patch > h1{
@@ -377,7 +378,8 @@ body {
     color: var(--white);
     font-size: 2.4rem;
     line-height: 120%;
-    margin-bottom: 0;
+    margin-bottom: 0;    
+    word-wrap: break-word;
 }
 
 .inlango-service-card a {
@@ -524,6 +526,11 @@ body {
     color: var(--white);
     box-sizing: border-box;
 }
+@media screen and (max-width: 425px) {
+    .inlango-home-clients {
+        height: 30vh;
+    }
+}
 
 .inlango-home-clients > h1 {
     height: 40%;
@@ -542,6 +549,7 @@ body {
     align-items: center;
     justify-items: center;
 }
+
 
 .inlango-home-clients > div > div {
     background-color: var(--white);
@@ -651,10 +659,12 @@ body {
 .inlango-footer h2{
     color: var(--white);
     font-size: 1rem;
+    word-wrap: break-word;
 }   
 
 .inlango-footer a{
     color: var(--white);
+    word-wrap: break-word;
 }
 
 .inlango-footer a:hover {
@@ -684,6 +694,12 @@ body {
 }
 .inlango-portfolio-container > div {
     display: grid;
+}
+@media screen and (max-width: 830px) {
+    .inlango-portfolio-container > div {
+        height: 100vh;
+        box-sizing: border-box;
+    }
 }
 .inlango-portfolio-container > div p {
     font-size: 1rem;
@@ -796,16 +812,14 @@ body {
     .inlango-portfolio-responsive {
         display: grid;
         grid-template-columns: 100% ;
+        margin-top: 10%;
     }
     .inlango-portfolio-container > div:nth-child(odd) {
         grid-template-columns: 100%;
-        padding: 10% 0 0 0;
     }
     .inlango-portfolio-container > div:nth-child(even) {
         grid-template-columns: 100%;
         text-align: left;
-        
-        padding: 10% 0 0 0;
     }
 }
 .inlango-portfolio-responsive {
